--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebPack Template Repository</title>
+    <title>Todo List</title>
 </head>
 <body>
-    
+    <div class="app-container"></div>
 </body>
 </html>
